Max width, prevent layout breaking

--- a/public/css/onething.css
+++ b/public/css/onething.css
@@ -55,6 +55,7 @@ body {
     line-height: 1.2em;
     font-size: 2.8em;
     text-align: center;
+    max-width:1000px;
 }
 .thing a {
     color: #000;
